# dlfcn-win32

./: CMakeLists.txt  Makefile
cmake/modules/: Macros.cmake
src/: CMakeLists.txt  dlfcn.c  dlfcn.h
tests/: CMakeLists.txt  test-dladdr.c
